# cvmaker

./: cv-maker.cabal  cvmaker.cabal  shell.nix  tex-shell.nix
content/: content.txt
example/: cvpl.txt  dotcvconfig
src/: Config.hs  ContentBuild.hs  Parse.hs  Type.hs  cv-maker.hs  cvmaker.hs
src/Text/StringTemplate/: Helpers.hs
template/: activity.tex.st  award.tex.st  command.tex  cv.tex.st  education.tex.st  experience.tex.st  header.tex.st  paper.tex.st  proceeding.tex.st  profile.tex.st  publication.tex.st  seminar.tex.st  workshop.tex.st
