Name:		cv-maker
Version:	0.0.0.0
Synopsis:	Curriculum Vitae Maker
Description: 	Curriculum Vitae Maker 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Executable cv-maker 
  Main-is: cv-maker.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, HStringTemplate, HStringTemplateHelpersIW


		 
