Name:		cvmaker
Version:	0.0.7.0
Synopsis:	Curriculum Vitae Maker
Description: 	Curriculum Vitae Maker 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
data-files:     
                template/*.tex
                template/*.tex.st
                template/*.sty

Executable cvmaker 
  Main-is: cvmaker.hs
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 mtl>2, 
                 directory, 
                 filepath>1, 
                 HStringTemplate,
                 parsec,
                 safe,
                 strict,
                 containers,
                 FileManip

Library
  hs-source-dirs: src 
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Exposed-Modules: 
                 Type
                 Parse
                 ContentBuild
                 Config

  Other-Modules: 
                 Paths_cvmaker
 
		 
